...
        .padding(.vertical, 5)
    }
    
    /// Overview for coin
    private var overview: some View {
        VStack (spacing: 20) {
            Text("Overview")
                .font(.title .bold())
                .foregroundColor(Color.theme.accent)
                .frame(maxWidth: .infinity, alignment: .leading)
            
            LazyVGrid(columns: columns, alignment: .leading, spacing: 30) {
                ForEach(vm.overviewStatistic) { stat in
...
                
                Button {
                    withAnimation(.easeInOut(duration: 0.4)) {
                        showAllDescription.toggle()
                    }
                } label: {
                    Text(showAllDescription ? "Hide description" : "Reed more")
                        .accessibilityIdentifier("description_Button_ID")
                        .foregroundColor(Color.theme.red)
                }
            }
        }
    }
...
