...
                        //.listRowBackground(Color.theme.background)
                    coinGecko
                        //.listRowBackground(Color.theme.background)
                }
            }
            .scrollContentBackground(.hidden)
            .navigationTitle("Settings")
            .toolbar {
                ToolbarItem(placement: .navigationBarLeading) {
                    Button {
                        goBack()
                    } label: {
                        Image(systemName: "arrowshape.turn.up.backward.2")
...
